--- a/docs/resources/lessons/light-sense.mdx
+++ b/docs/resources/lessons/light-sense.mdx
@@ -1,4 +1,4 @@
-# Sensing the World - Light!
+# Light Sensing
 
 In this lesson, students will learn about Light sensor and how to deal with is using BrainPad Arcade
 
