--- a/docs/resources/lessons/motion-sense.mdx
+++ b/docs/resources/lessons/motion-sense.mdx
@@ -1,4 +1,4 @@
-# Sensing the World-Motion!
+# Motion Sensing
 
 In this lesson, students will learn about Motion sensor and how to deal with is using BrainPad Arcade
 
