--- a/docs/resources/makecode-arcade.mdx
+++ b/docs/resources/makecode-arcade.mdx
@@ -79,10 +79,11 @@ The lessons include PowerPoint presentations, PDFs, and videos.
 
 ---
 
-### Edge Connectors
-<img src="/img/resources/makecode_arcade/ma_3.png" alt="Edge connectors" style={{ width: "50%" }} />
+### Edge Pads
 
-Let’s play with colors using the PINs
+![](pathname:///img/res/arcade/ec_13.jpg)
+
+Let’s play with colors using the Edge Pads and an RGB LED.
 
 <Button
   style={{ margin: "10px" }}
@@ -90,9 +91,11 @@ Let’s play with colors using the PINs
   link="/docs/resources/lessons/edge-connectors"
 />
 
+---
+
 ### Analog vs Digital
 
-<img src="/img/resources/makecode_arcade/ma_4.png" alt="Analog vs digital" style={{ width: "50%" }} />
+![Analog vs Digital](pathname:///img/res/arcade/ana-vs-digi.jpg)
 
 Add more fun to colors using PINs
 
@@ -102,9 +105,11 @@ Add more fun to colors using PINs
   link="/docs/resources/lessons/analog-vs-digital"
 />
 
-### LED reading
+---
 
-<img src="/img/resources/makecode_arcade/ma_5.png" alt="LED ring" style={{ width: "50%" }} />
+### LED Ring
+
+![LED Ring](pathname:///img/res/arcade/led-ring.png)
 
 Upgrading your games with extra lights!
 
@@ -114,37 +119,46 @@ Upgrading your games with extra lights!
   link="/docs/resources/lessons/led-ring"
 />
 
-### Sensing the World-Motion!
-<img src="/img/resources/makecode_arcade/ma_6.gif" alt="Motion sensor" style={{ width: "50%" }} />
+---
 
-Add physical movements to your game!
+### Motion Sensing
+
+
+![LED Ring](pathname:///img/res/arcade/motion-sense.gif)
+
+
+Add physical movement sensing to your game!
 
 <Button
   style={{ margin: "10px" }}
   label="Motion Sensor"
-  link="/docs/resources/lessons/sensing-the-world-motion"
+  link="/docs/resources/lessons/motion-sense"
 />
 
-### Sensing the World-Light!
+---
 
-<img src="/img/resources/makecode_arcade/ma_7.gif" alt="Light sensor" style={{ width: "50%" }} />
+### Light Sensing
 
-Connect your projects with lights.
+![LED Ring](pathname:///img/res/arcade/light-sense.gif)
+
+Measure light level.
 
 <Button
   style={{ margin: "10px" }}
   label="Light Sensor"
-  link="/docs/resources/lessons/sensing-the-world-light"
+  link="/docs/resources/lessons/light-sense"
 />
 
-### Sensing the World-Sound!
+---
 
-<img src="/img/resources/makecode_arcade/ma_8.gif" alt="Sound sensor" style={{ width: "50%" }} />
+### Sounds Sensing
 
-Connect your projects with your voice.
+![Sound Sensing](pathname:///img/res/arcade/sound-sense.gif)
+
+Control your projects with sounds.
 
 <Button
   style={{ margin: "10px" }}
   label="Sound Sensor"
-  link="/docs/resources/lessons/sensing-the-world-sound"
+  link="/docs/resources/lessons/sound-sense"
 />
