--- a/docs/resources/lessons/sound-sense.mdx
+++ b/docs/resources/lessons/sound-sense.mdx
@@ -1,4 +1,4 @@
-# Sensing the World - Sound!
+# Sound Sensing
 
 In this lesson, students will learn about Sound sensor and how to deal with is using BrainPad Arcade
 
