ready for test major moves

--- a/docs/catalog/brainbot.mdx
+++ b/docs/catalog/brainbot.mdx
@@ -122,7 +122,7 @@ After that, continue to chapter five where the content becomes more specific to 
   <Button
     style={{ margin: '10px' }}
     label="MakeCode for BrainPad Pulse eBook"
-    link="/ebook/MakeCode-for-BrainPad.pdf"
+    link="pathname:///ebook/makecode-for-brainpad.pdf"
   />
 </div>
 </TabItem>
