--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -120,7 +120,7 @@ After that, skip to page 60, where the content becomes more specific to BrainCli
   <Button
     style={{ margin: '10px' }}
     label="MakeCode for BrainPad Pulse eBook"
-    link="/ebook/MakeCode-for-BrainPad.pdf"
+    link="pathname:///ebook/makecode-for-brainpad.pdf"
   />
 </div>
 
