--- a/docs/resources/lessons/motion-sense.mdx
+++ b/docs/resources/lessons/motion-sense.mdx
@@ -2,10 +2,9 @@
 
 In this lesson, students will learn about Motion sensor and how to deal with is using BrainPad Arcade
 
-<div style={{ display: 'flex', justifyContent: 'center', gap: '1rem' }}>
-  <img src="/img/resources/makecode_arcade/sm_1.jpg" alt="BrainPad" width="500" />
-  <img src="/img/resources/makecode_arcade/sm_2.png" alt="Accessories" width="500" />
-</div>
+![Motion Sense](pathname:///img/res/arcade/sm_1.jpg)
+![Motion Sense](pathname:///img/res/arcade/sm_2.png)
+
 
 ## Target Audience
 
@@ -15,7 +14,7 @@ Anyone 13+ will benefit from this series. Younger audiences can still follow alo
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
-Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-connectors).
+Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-pads).
 
 ## Virtual Smart Door!
 
@@ -25,23 +24,19 @@ how do these doors open? let’s create our “Virtual Smart Door”, using Moti
 
 First, let’s draw a door in our Arcade screen, we will use two sprites, Door1 and Door2, and move it when the motion sensor detects a motion! we can use the “Change scale” to make it bigger.
 
-<img src="/img/resources/makecode_arcade/sm_3.png" alt="Code" width="500" />
+![Motion Sense](pathname:///img/res/arcade/sm_3.png)
 
 Now, we need to connect our Motion sensor to the Arcade.
 
 Connect “GND” from the sensor to “GND” at the Arcade, and “VCC” from the sensor to the “3V” at the Arcade.
 Finally, choose a pin to control it, we connect “OUT” from the sensor to PIN0 at the Arcade
 
-<img src="/img/resources/makecode_arcade/sm_4.png" alt="BrainPad connected" width="500" />
+![Motion Sense](pathname:///img/res/arcade/sm_4.png)
 
 Now, we will program the sensor, using “digital read” If the sensor reads a motion will give us “true” to open the door, or “false” to keep the door closed.
 
-<img src="/img/resources/makecode_arcade/sm_5.png" alt="Code" width="500" />
-<img src="/img/resources/makecode_arcade/sm_6.jpg" alt="Door closed" width="500" />
-<img src="/img/resources/makecode_arcade/sm_7.jpg" alt="Door Open" width="500" />
-
-## Whats next?
-
-Try to connect the sensor with one of the games, that moves the sprites when sensing a movement around the sensor.
+![Motion Sense](pathname:///img/res/arcade/sm_5.png)
+![Motion Sense](pathname:///img/res/arcade/sm_6.jpg)
+![Motion Sense](pathname:///img/res/arcade/sm_7.jpg)
 
 
