--- a/docs/resources/lessons/sound-sense.mdx
+++ b/docs/resources/lessons/sound-sense.mdx
@@ -2,10 +2,8 @@
 
 In this lesson, students will learn about Sound sensor and how to deal with is using BrainPad Arcade
 
-<div style={{ display: 'flex', justifyContent: 'center', gap: '1rem' }}>
-  <img src="/img/resources/makecode_arcade/ss_1.jpg" alt="BrainPad" width="500" />
-  <img src="/img/resources/makecode_arcade/ss_2.png" alt="Accessories" width="500" />
-</div>
+![Sound Sense](pathname:///img/res/arcade/ss_1.jpg)
+![Sound Sense](pathname:///img/res/arcade/ss_2.png)
 
 ## Target Audience
 
@@ -15,7 +13,7 @@ Anyone 13+ will benefit from this series. Younger audiences can still follow alo
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
-Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-connectors).
+Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-pads).
 
 # Save the Pearls
 
@@ -25,30 +23,24 @@ A shark is trying to take a pearl, and we should help the pearl to close when th
 
 First, we will add the background and the sprites.
 
-<img src="/img/resources/makecode_arcade/ss_3.png" alt="Code" width="500" />
+![Sound Sense](pathname:///img/res/arcade/ss_3.png)
 
 Then, we will make the shark move in random positions using this code.
 
-<img src="/img/resources/makecode_arcade/ss_4.png" alt="Code" width="500" />
+![Sound Sense](pathname:///img/res/arcade/ss_4.png)
+
 
 Connect “GND” from the sensor to “GND” at the Arcade, and “VCC” from the sensor to the “3V” at the Arcade.
 Finally, choose a pin to control it, we connect “SIG” from the sensor to PIN0 at the Arcade
 
-<img src="/img/resources/makecode_arcade/ss_5.png" alt="BrainPad connected" width="500" />
+![Sound Sense](pathname:///img/res/arcade/ss_5.png)
 
 Now, we will program the sensor, using “analog read” If the sensor reads a low value (greater than 200 depending on your sounds) when shout “CLOSE” to tell the pearl to close!
 
-<img src="/img/resources/makecode_arcade/ss_6.png" alt="Code" width="500" />
+![Sound Sense](pathname:///img/res/arcade/ss_6.png)
 
-<div style={{ display: 'flex', justifyContent: 'center', gap: '1rem' }}>
-  <img src="/img/resources/makecode_arcade/ss_7.jpg" alt="8" width="500" />
-  <img src="/img/resources/makecode_arcade/ss_8.jpg" alt="285" width="500" />
-</div>
-
-## What next?
-
-Try to connect the sensor with one of the games, and control your sprites with voice!
-
+![Sound Sense](pathname:///img/res/arcade/ss_7.jpg)
+![Sound Sense](pathname:///img/res/arcade/ss_8.jpg)
 
 
 
