--- a/docs/catalog/braintronics.mdx
+++ b/docs/catalog/braintronics.mdx
@@ -108,7 +108,7 @@ If you're new, start by reading the first four chapters of the book: Introductio
   <Button
     style={{ margin: '10px' }}
     label="MakeCode for BrainPad Pulse eBook"
-    link="/ebook/MakeCode-for-BrainPad.pdf"
+    link="pathname:///ebook/makecode-for-brainpad.pdf"
   />
 </div>
 
