--- a/docs/resources/lessons/analog-vs-digital.mdx
+++ b/docs/resources/lessons/analog-vs-digital.mdx
@@ -4,17 +4,13 @@ In this lesson, students will learn about digital and analog values and differen
 
 ![Analog vs Digital](pathname:///img/res/arcade/ana-vs-digi.jpg)
 
-## Target Audience
-
-Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
-
 ## Setup
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
-And you will need an RGB LED and alligator clips with BRainPad Arcade.
+And you will need an RGB LED and alligator clips with BrainPad Arcade.
 
-And you need to finish the previous [Edge Pads](/docs/resources/lessons/edge-pads) project.
+Prerequisite: And you need to finish the previous [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
 ## Analog vs Digital PINs
 
