--- a/docs/resources/lessons/edge-pads.mdx
+++ b/docs/resources/lessons/edge-pads.mdx
@@ -4,9 +4,7 @@ In this lesson, students will learn about the Edge Pads on the BrainPad Arcade a
 
 ![Edge Pads](pathname:///img/res/arcade/edge-pads.jpg)
 
-## Target Audience
-
-Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
+Target Audience: Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
 
 ## Setup
 
