--- a/docs/resources/lessons/led-ring.mdx
+++ b/docs/resources/lessons/led-ring.mdx
@@ -14,7 +14,7 @@ You will need any computer with a modern internet connection. Windows, Mac, and 
 
 And you will need a Ring LED and alligator clips with BrainPad Arcade.
 
-And you need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
+Prerequisite: You need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
 ---
 
