--- a/docs/resources/lessons/light-sense.mdx
+++ b/docs/resources/lessons/light-sense.mdx
@@ -2,8 +2,7 @@
 
 In this lesson, students will learn about Light sensor and how to deal with is using BrainPad Arcade
 
-![Light Sense](pathname:///img/res/arcade/sl_1.jpg)
-![Light Sense](pathname:///img/res/arcade/sl_2.png)
+![Light Sense](pathname:///img/res/arcade/light-sensor.png)
 
 
 ## Target Audience
