--- a/docs/resources/lessons/motion-sense.mdx
+++ b/docs/resources/lessons/motion-sense.mdx
@@ -2,27 +2,21 @@
 
 In this lesson, students will learn about Motion sensor and how to deal with is using BrainPad Arcade
 
-![Motion Sense](pathname:///img/res/arcade/sm_1.jpg)
-![Motion Sense](pathname:///img/res/arcade/sm_2.png)
-
-
-## Target Audience
-
-Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
+![Motion Sense](pathname:///img/res/arcade/motion-sense.gif)
 
 ## Setup
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
-Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-pads).
+You will need some sensors from the [BrainClip](../../catalog/brainclip) kit, And you need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
 ## Virtual Smart Door!
 
-when you go through a mall door, the door will automatically open, like when you enter an elevator.
+When you go through a mall door, the door will automatically open, like when you enter an elevator.
 
-how do these doors open? let’s create our “Virtual Smart Door”, using Motion Sensor and BrainPad Arcade
+How do these doors open? Let's create our "Virtual Smart Door", using Motion Sensor and BrainPad Arcade
 
-First, let’s draw a door in our Arcade screen, we will use two sprites, Door1 and Door2, and move it when the motion sensor detects a motion! we can use the “Change scale” to make it bigger.
+First, let's draw a door in our Arcade screen, we will use two sprites, Door1 and Door2, and move it when the motion sensor detects a motion! we can use the “Change scale” to make it bigger.
 
 ![Motion Sense](pathname:///img/res/arcade/sm_3.png)
 
@@ -36,7 +30,13 @@ Finally, choose a pin to control it, we connect “OUT” from the sensor to PIN
 Now, we will program the sensor, using “digital read” If the sensor reads a motion will give us “true” to open the door, or “false” to keep the door closed.
 
 ![Motion Sense](pathname:///img/res/arcade/sm_5.png)
+
+Motion is not detected.
+
 ![Motion Sense](pathname:///img/res/arcade/sm_6.jpg)
+
+Motion is detected.
+
 ![Motion Sense](pathname:///img/res/arcade/sm_7.jpg)
 
 
