--- a/docs/resources/lessons/sound-sense.mdx
+++ b/docs/resources/lessons/sound-sense.mdx
@@ -2,24 +2,18 @@
 
 In this lesson, students will learn about Sound sensor and how to deal with is using BrainPad Arcade
 
-![Sound Sense](pathname:///img/res/arcade/ss_1.jpg)
-![Sound Sense](pathname:///img/res/arcade/ss_2.png)
+![Sound Sense](pathname:///img/res/arcade/sound-sense.gif)
 
-## Target Audience
-
-Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
 
 ## Setup
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
-Having a BrainPad Arcade will help you understand the Edge connectors, take the game you made, and load it on a device you are holding. You will need some sensors from the BrainClip kit, And you need to finish the previous project from [here](/docs/resources/lessons/edge-pads).
+You will need some sensors from the [BrainClip](../../catalog/brainclip) kit, And you need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
 # Save the Pearls
 
-We are under the ocean, where there are many Pearls and sharks.
-
-A shark is trying to take a pearl, and we should help the pearl to close when the shark is near it.
+We are under the ocean, where there are many Pearls and sharks. A shark is trying to take a pearl, and we should help the pearl to close when the shark is near it.
 
 First, we will add the background and the sprites.
 
@@ -39,7 +33,12 @@ Now, we will program the sensor, using “analog read” If the sensor reads a l
 
 ![Sound Sense](pathname:///img/res/arcade/ss_6.png)
 
+Open it!
+
 ![Sound Sense](pathname:///img/res/arcade/ss_7.jpg)
+
+Close it!
+
 ![Sound Sense](pathname:///img/res/arcade/ss_8.jpg)
 
 
