--- a/docs/resources/makecode-arcade.mdx
+++ b/docs/resources/makecode-arcade.mdx
@@ -83,7 +83,7 @@ The lessons include PowerPoint presentations, PDFs, and videos.
 
 ![](pathname:///img/res/arcade/ec_13.jpg)
 
-Let’s play with colors using the Edge Pads and an RGB LED.
+Let's play with colors using the Edge Pads and an RGB LED.
 
 <Button
   style={{ margin: "10px" }}
