--- a/docs/resources/intro.mdx
+++ b/docs/resources/intro.mdx
@@ -8,28 +8,29 @@ import TabItem from "@theme/TabItem";
 
 # Resources
 
-With the BrainPad's PLAY|CODE|EXCEL, we want student to "play" first. Let them enjoy the world of coding and, before they know it, they would find themselves building games and accessing the world of physical computing.
+With the BrainPad's `PLAY|CODE|EXCEL`, we want student to `play` first. Let them enjoy the world of `coding` and, before they know it, they would find themselves `excelling` in building games and accessing the world of physical computing.
 
+---
 
-
-# Frequently Asked Questions
+## Frequently Asked Questions
 
 <details>
-  <summary>FAQ 1</summary>
+  <summary>Where are the hardware design files?</summary>
 
-  Hello World
+  They are all on the [BrainPad Hardware](https://github.com/brainpad-board/hardware) repo.
   
 </details>
 
 <details>
-  <summary>FAQ 2</summary>
+  <summary>How do I report issues, or contribute, to the website?</summary>
 
-  Hello World
+  Make a pull request or submit an issue on the [BrainPad Website](https://github.com/brainpad-board/brainpad-website) repo.
   
 </details>
-<details>
-  <summary>FAQ 3</summary>
 
-  Hello World
-  
+<details>
+  <summary>How can you help me STEMify my organization?</summary>
+
+  Checkout some of the great [events](/events) we have done with other organizations. [Reach out to us](/about#contact-us) and find the best way to help you in achieving your goals.
+
 </details>
