--- a/docs/resources/lessons/sound-sense.mdx
+++ b/docs/resources/lessons/sound-sense.mdx
@@ -11,7 +11,7 @@ You will need any computer with a modern internet connection. Windows, Mac, and 
 
 You will need some sensors from the [BrainClip](../../catalog/brainclip) kit, And you need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
-# Save the Pearls
+## Save the Pearls
 
 We are under the ocean, where there are many Pearls and sharks. A shark is trying to take a pearl, and we should help the pearl to close when the shark is near it.
 
