--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -31,7 +31,7 @@ Using  circuits in teaching allows learners to develop hands-on skills in critic
     padding: "10px 0px 1px 0px",
   }}
 >
-# Our Vision
+## Our Vision
 </p>
 
 ![About Vision](pathname:///img/about-vision.jpg)
@@ -46,7 +46,7 @@ To give everyone the necessary skills required to understand the ever-growing ne
     padding: "10px 0px 1px 0px",
   }}
 >
-# Mission Statement
+## Mission Statement
 </p>
 
 
@@ -63,7 +63,7 @@ To empower educators in making programming gratifying and accessible to all lear
 
 ---
 
-# Perfected in the USA
+## Perfected in the USA
 
 ![USA Flag](pathname:///img/usa-flag.png)
 
@@ -81,7 +81,7 @@ Our parent company GHI Electronics is a commercial engineering and manufacturing
 
 ---
 
-# United Nations' SDG
+## United Nations' SDG
 
 At BrainPad, we are committed to the United Nations’ Sustainable Development Goals (SDGs),
 and we work and support the following common goals:
@@ -92,7 +92,7 @@ The BrainPad ecosystem is designed to provide learners with direct access to the
 
 ---
 
-# Together, we can code the world!
+## Together, we can code the world!
 
 ![Hello World](pathname:///img/display-hello-world.png)
 
@@ -100,7 +100,7 @@ We believe in global efforts as much as we believe in coding things. What can Br
 
 ---
 
-# Contact Us
+## Contact Us
 
 BrainPad - GHI Electronics, LLC<br/>
 501 E Whitcomb Avenue. Madison Heights, MI 48071. USA
