--- a/docs/resources/lessons/led-ring.mdx
+++ b/docs/resources/lessons/led-ring.mdx
@@ -4,11 +4,7 @@ In this lesson, students will learn about ring light and how to program it using
 
 ![LED Ring](pathname:///img/res/arcade/lr_1.png)
 
-# Target Audience
-
-Anyone 13+ will benefit from this series. Younger audiences can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
-
-# Setup
+## Setup
 
 You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
 
