--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -5,18 +5,25 @@ hide_table_of_contents: true
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
-We offer coding platform with an enhanced technological learning experience that is gratifying and accessible to all ages and backgrounds through our educational devices and coding events.
-
 ![BrainPad Logo](pathname:///img/brainpad-logo.png)
 
 BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY</strong>. Understanding <strong>CODE</strong> is essential to <strong>EXCEL</strong> in this digitally transformed era.
 
-Combining circuits in teaching allows learners to develop hands-on skills in addition to using critical thinking, logic, and analytics.
+![BrainPad Arcade](pathname:///img/catalog/arcade-v2-front.jpg)
+
+We offer coding platform with an enhanced technological learning experience that is gratifying and accessible to all ages and backgrounds through our educational devices and coding events.
+
+Using  circuits in teaching allows learners to develop hands-on skills in critical-thinking, logic, and analytics.
 
 <Button
   style={{ margin: "10px" }}
   label="Impact"
   link="impact"
+/>
+<Button
+  style={{ margin: "10px" }}
+  label="Catalog"
+  link="/docs/catalog/intro"
 />
 
 ---
@@ -28,7 +35,7 @@ Combining circuits in teaching allows learners to develop hands-on skills in add
     padding: "10px 0px 1px 0px",
   }}
 >
-# Our Vision
+## Our Vision
 </p>
 
 ![About Vision](pathname:///img/about-vision.jpg)
@@ -43,7 +50,7 @@ To give everyone the necessary skills required to understand the ever-growing ne
     padding: "10px 0px 1px 0px",
   }}
 >
-# Mission Statement
+## Mission Statement
 </p>
 
 
@@ -60,7 +67,7 @@ To empower educators in making programming gratifying and accessible to all lear
 
 ---
 
-# Perfected in the USA
+## Perfected in the USA
 
 ![USA Flag](pathname:///img/usa-flag.png)
 
@@ -78,26 +85,22 @@ Our parent company GHI Electronics is a commercial engineering and manufacturing
 
 ---
 
-# United Nations' SDG
+## Global Stewardship
 
-At BrainPad, we are committed to the United Nations’ Sustainable Development Goals (SDGs),
+At BrainPad, we are committed to the United Nations' Sustainable Development Goals (SDGs),
 and we work and support the following common goals:
 
 ![About Vision](pathname:///img/united-nations-sdg.png)
 
 The BrainPad ecosystem is designed to provide learners with direct access to the innovators of the technology that is hardware + software, a unique feature of what we do.
 
----
-
-# Together, we can code the world!
-
 ![Hello World](pathname:///img/display-hello-world.png)
 
-We believe in global efforts as much as we believe in coding things. What can BrainPad do for you?
+We believe in global efforts as much as we believe in coding things.
 
 ---
 
-# Contact Us
+## Contact Us
 
 BrainPad - GHI Electronics, LLC<br/>
 501 E Whitcomb Avenue. Madison Heights, MI 48071. USA
